--- a/yaya.css
+++ b/yaya.css
@@ -39,7 +39,7 @@ font-size: 30px;
     border-radius: 8px;
 }
 .a-navbar {
-    color: black;
+    color: white;
     text-decoration: none;
     font-weight: 100;
 }
