--- a/yaya.css
+++ b/yaya.css
@@ -141,6 +141,16 @@ font-size: 30px;
     height: 100px;
     border: 10px;
 }
+.img-content2 {
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    display: block;
+    margin: auto;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
 
 
 .container-footer{
