--- a/yaya.css
+++ b/yaya.css
@@ -78,7 +78,7 @@ font-size: 30px;
 
 
 .container-content {
-    background-image: url('pro.gif');
+    background-image: url(pro.gif);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
