--- a/yaya.css
+++ b/yaya.css
@@ -2,9 +2,30 @@
 html {
     margin: 0;
     padding: 0;
-
-    
+  
 }
+.body {background-image: url('pro.gif');
+
+    background-size: cover;
+
+    background-position: center;
+
+    background-repeat: no-repeat;
+
+    display: flex;
+
+    justify-content: center;
+
+    align-items: center;
+
+    height: 100%;
+
+    width: 100%;
+
+    margin: 0;
+
+    padding: 0;
+      }
 
 .container {
 background-color: blue;
