--- a/yaya.css
+++ b/yaya.css
@@ -4,7 +4,7 @@ html {
     padding: 0;
   
 }
-.body {background-image: url('pro.gif');
+.body {background-image: url('Pro.gif');
 
     background-size: cover;
 
