--- a/yaya.css
+++ b/yaya.css
@@ -4,26 +4,16 @@ html {
     padding: 0;
   
 }
-.body {background-image: url('Pro.gif');
-
-    background-size: cover;
-
-    background-position: center;
-
+body {background-image: url(Pro.gif);
+      background-size: cover;
+      background-position: center;
     background-repeat: no-repeat;
-
     display: flex;
-
     justify-content: center;
-
     align-items: center;
-
     height: 100%;
-
     width: 100%;
-
     margin: 0;
-
     padding: 0;
       }
 
