--- a/yaya.css
+++ b/yaya.css
@@ -4,18 +4,7 @@ html {
     padding: 0;
   
 }
-body {background-image: url(Pro.gif);
-      background-size: cover;
-      background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-      }
+
 
 .container {
 background-color: blue;
@@ -23,7 +12,7 @@ background-color: blue;
 }
 
 .container-navbar{
-    background-image: url(pro.gif);
+    background-color: blue;
     width: 150%px;
     height: 100%px;
 }
