--- a/yaya.css
+++ b/yaya.css
@@ -4,6 +4,17 @@ html {
     padding: 0;
   
 }
+body {background-image: url(Pro.gif);
+      background-size: cover;
+      background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+    width: 50%;
+    margin: 0;
+    padding: 0;
 
 
 .container {
