--- a/yaya.css
+++ b/yaya.css
@@ -11,14 +11,14 @@ body {background-image: url(Pro.gif);
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50%;
-    width: 50%;
+    height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
 
 
 .container {
-background-color: blue;
+background-color: purple;
 
 }
 
