--- a/yaya.css
+++ b/yaya.css
@@ -25,8 +25,8 @@ background-color: purple;
 
 .container-navbar{
     background-color: green;
-    width: 150%;
-    height: 100%;
+    width: 150px;
+    height: 100px;
 }
 
 .ul-navbar{
