--- a/yaya.css
+++ b/yaya.css
@@ -4,19 +4,6 @@ html {
     padding: 0;
   
 }
-body {
-    background-image: url(Pro.gif);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-
 
 .container {
 background-color: purple;
@@ -90,17 +77,11 @@ font-size: 30px;
 
 
 .container-content {
-    background-image: url(pro.gif);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-color: yellow;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+    width: 100vh;
 }
 
 
