--- a/yaya.css
+++ b/yaya.css
@@ -81,7 +81,7 @@ font-size: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vh;
+    width: 100%;
 }
 
 
