--- a/yaya.css
+++ b/yaya.css
@@ -77,7 +77,7 @@ font-size: 30px;
 
 
 .container-content {
-    background-color: pink;
+    background-image: url(Pro.gif);
     display: flex;
     justify-content: center;
     align-items: center;
