--- a/yaya.css
+++ b/yaya.css
@@ -11,7 +11,7 @@ background-color: purple;
 }
 
 .container-navbar{
-    background-color: green;
+    background-color: blue;
     width: 150%;
     height: 100%;
 }
@@ -78,11 +78,16 @@ font-size: 30px;
 
 .container-content {
     background-image: url(Pro.gif);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 150%; 
+    height: 100%; 
+    margin: 0;
+    padding: 0;
 }
 
 
