--- a/yaya.css
+++ b/yaya.css
@@ -6,7 +6,7 @@ html {
 }
 
 .container {
-background-color: purple;
+background-color: blue;
 
 }
 
@@ -85,7 +85,7 @@ font-size: 30px;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%; 
+    height: 130%; 
     margin: 0;
     padding: 0;
 }
