--- a/yaya.css
+++ b/yaya.css
@@ -159,7 +159,7 @@ font-size: 30px;
 
 
 .container-footer{
-background-color: yellow;
+background-color: blue;
 display: flex;
 height: 10vh;
 justify-content: center;
