--- a/yaya.css
+++ b/yaya.css
@@ -92,7 +92,7 @@ font-size: 30px;
 
 
 .container-content3 {
-    background-image: url(peluru2.gif);
+    background-image: url(Peluru2.gif);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
