--- a/yaya.css
+++ b/yaya.css
@@ -40,7 +40,7 @@ font-size: 30px;
 .a-navbar {
     color: white;
     text-decoration: none;
-    font-weight: 100;
+    font-weight: 200px;
 }
 
 .a-navbar2 {
